--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -8,3 +8,4 @@ deployment:
     - /bin/cp -R image $DEPLOYPATH
     - /bin/cp -R lib $DEPLOYPATH
     - /bin/cp -R templates $DEPLOYPATH
+    - /bin/cp favicon.png $DEPLOYPATH
